--- a/supports/index.html
+++ b/supports/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +9,8 @@
     <title>E-Commerce Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="register.php">
+    <link rel="stylesheet" href="login.php">
     
 </head>
 <body>
@@ -20,6 +23,7 @@
         <li><a href="blog.html">Blog</a></li>  
         <li><a href="about.html">About</a></li>  
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="sign in.html">Sign in </a></li>
         <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>  
         <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>   
     </ul>
